Fixed memory leak (XERCESC-1834)

git-svn-id: https://svn.apache.org/repos/asf/xerces/c/branches/xerces-3.0@707375 13f79535-47bb-0310-9956-ffa450edef68